--- a/SchedulingSystem/SchedulingSystem.csproj
+++ b/SchedulingSystem/SchedulingSystem.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Course.cs" />
+    <Compile Include="Output.cs" />
     <Compile Include="Timetable.cs" />
     <Compile Include="Venue.cs" />
     <Compile Include="InputClass.cs" />
